distributable/index.css: Fix vertical misalignment of menu bar buttons
Also fixes the popup container not being positioned at the very bottom
of the page.

--- a/distributable/index.css
+++ b/distributable/index.css
@@ -129,11 +129,9 @@ body
     display: flex;
     align-items: center;
     width: 100%;
-    height: 32px;
     padding: 0;
     cursor: initial;
     border-bottom: 1px solid black;
-    box-sizing: border-box;
     flex-shrink: 0;
 }
 
@@ -160,15 +158,11 @@ body
 #html-ui .menu-bar .label
 {
     color: black;
-    display: flex;
-    vertical-align: text-bottom;
     font-size: 85%;
     text-decoration: none;
     color: #c2c2c2;
     background: transparent;
-    padding: 0 10px 0 10px;
-    align-items: center;
-    height: 100%;
+    padding: 7px 10px;
 }
 
 #html-ui .menu-bar .button
@@ -271,7 +265,7 @@ body
     z-index: var(--zindex-popups);
     width: 420px;
     height: auto;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     display: flex;
